--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "gua"
+authors = [{name = "Luis Fernando Victor", email = "luis.fdo.victor.g@gmail.com"}]
 dynamic = ["version", "description"]
