Corrigiendo error con citas

--- a/docs/readthedocs.yml
+++ b/docs/readthedocs.yml
@@ -17,5 +17,4 @@ python:
       - method: pip
         path: .
         extra_requirements:
-         - docs
-         - requirements.txt
+         - docs/source/requirements.txt
