--- a/docs/readthedocs.yml
+++ b/docs/readthedocs.yml
@@ -17,4 +17,4 @@ python:
       - method: pip
         path: .
         extra_requirements:
-         - docs/source/requirements.txt
+         - source/requirements.txt
