--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,4 +17,4 @@ python:
       - method: pip
         path: .
         extra_requirements:
-         - source/requirements.txt
+         - docs/source/requirements.txt
