Corrigiendo error con citas

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,5 +16,4 @@ python:
     install:
       - method: pip
         path: .
-        extra_requirements:
-         - docs/source/requirements.txt
+      - requirements: docs/source/requirements.txt
