--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,4 +16,4 @@ python:
     install:
       - method: pip
         path: .
-      - requirements: docs/source/requirements.txt
+      - requirements: docs
