--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,19 +1,14 @@
 version: 2
 
-#conda:
-#    environment: conda/environment.yml
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
 
 sphinx:
-    configuration: docs/source/conf.py
-
-build:
-    image: latest
-
-formats:
-  - pdf
+   configuration: docs/source/conf.py
 
 python:
     install:
-      - method: pip
-        path: .
-      - requirements: docs
+      - requirements: docs/source/requirements.txt
+
